fix: modal弹框去除overflow为hidden

--- a/html/modal.css
+++ b/html/modal.css
@@ -12,7 +12,6 @@
   height: 300px;
   background-color: #fff;
   border-radius: 4px;
-  overflow: hidden;
   z-index: 101
 }
 
